--- a/ISCP/MainWindow.xaml
+++ b/ISCP/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ISCP"
         mc:Ignorable="d"
-        Title="Hiding a message in an image file" Height="350" Width="525">
+        Title="Hiding a message in an image file" Height="350" Width="525" Loaded="Window_Loaded">
     <StackPanel>
         <Menu>
             <MenuItem Name="file" Header="File">
