--- a/ISCP/PassPhraseWindow.xaml
+++ b/ISCP/PassPhraseWindow.xaml
@@ -8,7 +8,7 @@
         Title="Password" Height="140" Width="300" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner">
     <StackPanel>
         <TextBlock Margin="10,15,0,0" Text="Enter the password phrase:"/>
-        <PasswordBox Margin="10,3,10,0"/>
+        <PasswordBox x:Name="password" Margin="10,3,10,0"/>
         <WrapPanel HorizontalAlignment="Right" Margin="0,15,10,0">
             <Button x:Name="buttonOk" Margin="0,0,5,0" MinWidth="50" Content="OK" IsDefault="True" Click="buttonOk_Click"/>
             <Button x:Name="buttonCancel" MinWidth="50" Content="Cancel" IsCancel="True" Click="buttonCancel_Click"/>
